@@ -1,3 +1,11 @@
+[B]2.6.6[/B]
+- fix ident
+
+[B]2.6.5[/B]
+- new startup spinner during initial connection
+- additional fix for utf encoded filename in web client
+- eliminate unnecessary resume point save in web client
+
 [B]2.6.4[/B]
 - fix utf encoded filename in web client
 
